--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -72,7 +72,7 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         run: |
           cd proyecto_final/modules
-          terraform apply tfplan
+          terraform apply tfplan -auto-approve
       
       
 
