--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY package.json .
-RUN npm install --production
+RUN npm install --production && npm cache clean --force
 COPY . .
 EXPOSE 3000
 CMD ["node", "app.js"]
