--- a/proyecto_final/modules/docker-compose.yml
+++ b/proyecto_final/modules/docker-compose.yml
@@ -1,30 +1,51 @@
 version: '3.9'
 
 services:
-  wordpress:
-    image: wordpress:latest
-    container_name: wordpress
-    #env_file: 
-    #  - .env #E:\CURSO DEVOP&CLOUD_CAMPUSDUAL_CLUSTERTIC\2025\08 OCTAVA CLASE_IaC_Terraform-Terragrunt_Docker_16012025\infra-resources1\modulo_wordpress\.env
-    environment:
-      WORDPRESS_DB_HOST: database-dev.criuqg402mat.eu-west-3.rds.amazonaws.com #${db_endpoint} #${DB_HOST}  # Aquí va el endpoint de tu RDS MySQL
-      WORDPRESS_DB_NAME: mydbenv     #${DB_NAME}
-      WORDPRESS_DB_USER: admin #${DB_USER}
-      WORDPRESS_DB_PASSWORD: password123 #${DB_PASSWORD}
+  frontend:
+    image: nginx:alpine  # Imagen del frontend (NGINX)
+    container_name: frontend
     ports:
-      - "8080:80"
-    networks:
-      - wordpress-network
-    restart: always      
+      - "8081:80"  # Expone el frontend en el puerto 8080
     volumes:
-       - ./wordpress-data:/var/www/html
-       #- ./wp-config.php:/var/www/html/wp-config.php  # Copiar tu archivo wp-config.php al contenedor
-      
+      - ./frontend:/usr/share/nginx/html  # Mapea los archivos estáticos al contenedor
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf  # Configuración personalizada de NGINX
+    networks:
+    - app_network
+
+  backend:
+    build:
+      context: ./backend  # Construir la imagen desde el directorio app-web
+      #dockerfile: ./backend  # Asegúrate de que la ruta esté correcta si el Dockerfile no está en app-web
+    container_name: backend
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/mydatabase  # URI de conexión a MongoDB
+    #working_dir: /app/backend  # Directorio de trabajo dentro del contenedor (donde estará server.js)
+    #volumes:
+    #  - ./app-web/backend:/app/backend  # Mapea el código del backend al contenedor
+    #command: "node server.js"  # Comando para iniciar la aplicación
+    ports:
+      - "3000:3000"  # Expone el backend en el puerto 3000    
+    command: "node server.js"  # Comando para iniciar la aplicación
+    depends_on:
+      - database  # El backend depende de la base de datos
+    networks:
+    - app_network
+
+  database:
+    image: mongo:5.0  # Imagen de MongoDB
+    container_name: database
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root  # Usuario root
+      - MONGO_INITDB_ROOT_PASSWORD=rootpassword  # Contraseña root
+    ports:
+      - "27017:27017"  # Expone MongoDB en el puerto 27017
+    volumes:
+      - mongodb_data:/data/db  # Volumen persistente para los datos de la base de datos
+    networks:
+    - app_network
 
 networks:
-  wordpress-network:
-    driver: bridge
+  app_network:  # Red de red para los contenedores
 
-#volumes:
-  #wordpress-data:
-    #driver: local
+volumes:
+  mongodb_data:  # Volumen para la base de datos
