--- a/proyecto_final/modules/install.yaml
+++ b/proyecto_final/modules/install.yaml
@@ -88,11 +88,11 @@
         append: yes
       
         
-    # - name: Copy the docker-compose.yml file
-    #   copy:
-    #     src: /home/docker-compose.yml         
-    #     dest: /home/ubuntu/docker-compose.yml
-    #     mode: '0644'
+    - name: Copy the docker-compose.yml file
+       copy:
+         src: ./docker-compose.yml         
+         dest: /home/ubuntu/docker-compose.yml
+         mode: '0644'
 
     
     - name: Start the Docker containers
