--- a/kubernetes/daemonset-example.yaml
+++ b/kubernetes/daemonset-example.yaml
@@ -27,3 +27,7 @@ spec:
           limits:
             cpu: "200m"
             memory: "256Mi"
+      tolerations:
+      - key: node-role.kubernetes.io/control-plane
+        operator: Exists
+        effect: NoSchedule
