--- a/.github/workflows/deploy_ecr.yaml
+++ b/.github/workflows/deploy_ecr.yaml
@@ -17,9 +17,18 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Log in to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v1
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-region: eu-west-1
+        role-to-assume: arn:aws:iam::2481899437:role/MyGitHubActionsRole
+    
+    - name: Login to Amazon ECR
+      run: |
+        aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 2481899437.dkr.ecr.eu-west-1.amazonaws.com   
 
+    
+    
     - name: Build Docker image
       run: |
         docker build -t ecr-jgl-deploy ./modulo_ecr_deploy
