--- a/chat_app/.github/workflows/chat_app_deploy.yaml
+++ b/chat_app/.github/workflows/chat_app_deploy.yaml
@@ -18,6 +18,13 @@ jobs:
       with:
         terraform_version: 1.0.0
 
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1  # Cambia esto a tu región deseada
+
     - name: Initialize Terraform
       run: terraform init
 
@@ -27,25 +34,55 @@ jobs:
     - name: Apply Terraform
       run: terraform apply -auto-approve
 
-  deploy_k8s:
+  docker:
     runs-on: ubuntu-latest
     needs: terraform
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Amazon ECR
+        run: |
+          aws ecr get-login-password --region eu-west-1 --profile 248189943700_EKS-alumnos | docker login --username AWS --password-stdin 248189943700.dkr.ecr.eu-west-1.amazonaws.com/chat-app-repo
+
+      - name: Build Docker image
+        run: docker build -t 248189943700.dkr.ecr.eu-west-1.amazonaws.com/chat-app-repo:latest .
+
+      - name: Push Docker image to ECR
+        run: docker push 248189943700.dkr.ecr.eu-west-1.amazonaws.com/chat-app-repo:latest
+
+
+  deploy_k8s:
+    runs-on: ubuntu-latest
+    needs: docker
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v1
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        version: 'v1.21.0'
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-1  # Cambia esto a tu región deseada
 
+    
     - name: Configure kubectl
-      run: kubectl config set-cluster eks --server=${{ secrets.EKS_CLUSTER_ENDPOINT }} --certificate-authority=${{ secrets.EKS_CA_CERTIFICATE }}
-      env:
-        KUBECONFIG: ${{ secrets.KUBECONFIG }}
+      run: |
+          aws eks --region eu-west-1 --profile 248189943700_EKS-alumnos update-kubeconfig --name chat-app-cluster        
+      
+
+    - name: Update kubeconfig
+      run: |
+          aws eks update-kubeconfig --name chat-app-cluster --region eu-west-1 --profile 248189943700_EKS-alumnos  
 
     - name: Deploy to Kubernetes
       run: |
-        kubectl apply -f k8s/chat-app-deployment.yaml
-        kubectl apply -f k8s/chat-app-service.yaml
+        cd k8s    
+        kubectl apply -f chat-app-deployment.yaml  
+        kubectl apply -f chat-app-service.yaml
+        
