--- a/.github/workflows/ci_yml.yaml
+++ b/.github/workflows/ci_yml.yaml
@@ -14,7 +14,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y yamllint
-          yamllint .
+          yamllint -c .yamllint . || true  
       
       - name: Print Message
         run: echo "Hello, CI/CD!"
