--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,12 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - dev
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build and Test
-        run: |
-          echo "Running tests..."
-          # Simula un test
       
       - name: Create Status Badge
         if: always()
@@ -20,17 +16,20 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const fs = require('fs');
+            const path = require('path');
+            
+            const readmePath = path.join(process.env.GITHUB_WORKSPACE, 'README.md');
             const workflowName = 'CI Pipeline';
             const badgeUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/workflows/ci.yml/badge.svg`;
             const badgeMarkdown = `![${workflowName}](${badgeUrl})`;
             
             // Crear README.md si no existe
             if (!fs.existsSync(readmePath)) {
-                fs.writeFileSync(readmePath, `# Mi Proyecto\n\n${badgeMarkdown}`);
+              fs.writeFileSync(readmePath, `# Mi Proyecto\n\n${badgeMarkdown}`);
             } else {
-                let readme = fs.readFileSync(readmePath, 'utf8');
-                if (!readme.includes(badgeMarkdown)) {
+              let readme = fs.readFileSync(readmePath, 'utf8');
+              if (!readme.includes(badgeMarkdown)) {
                 readme = badgeMarkdown + '\n\n' + readme;
                 fs.writeFileSync(readmePath, readme);
-                }
+              }
             }
