Configuración inicial de proyecto con GitHub Actions

--- a/.github/workflows/full.yaml
+++ b/.github/workflows/full.yaml
@@ -24,6 +24,7 @@ jobs:
       
       - name: Run Tests
         run: |
+          export PYTHONPATH=$PYTHONPATH:./src
           pytest tests/ --junitxml=test-results/junit.xml
       
       - name: Upload Test Results
